compiler-core/src/version_bump/snapshots/gleam_core__version_bump__tests__renaming_constant_while_keeping_old_alias_is_minor.snap
---
source: compiler-core/src/version_bump/tests.rs
expression: bump
---
-- MINOR

== the_module ==
+ pub const new_name
