compiler-core/src/version_bump/snapshots/gleam_core__version_bump__tests__swapping_custom_type_with_alias_is_minor.snap
---
source: compiler-core/src/version_bump/tests.rs
expression: bump
---
-- MINOR

== the_module ==
- pub type Custom {
-   Wibble
-   Wobble
- }
+ pub type Custom = Alias
