compiler-core/src/version_bump/snapshots/gleam_core__version_bump__tests__tuple_length_change_is_major2.snap
---
source: compiler-core/src/version_bump/tests.rs
expression: bump
---
-- MAJOR

== the_module ==
- pub const tuple: #(Int, Float, Bool)
+ pub const tuple: #(Int, Float)
